fix(mobile): rename container overflow when text too long

--- a/src/main/frontend/components/page.css
+++ b/src/main/frontend/components/page.css
@@ -291,7 +291,7 @@ a.page-title {
 }
 
 .page-title-sizer-wrapper {
-  @apply w-full;
+  @apply w-full overflow-x-auto;
 
   :empty::before {
     content: '\200b';
